--- a/pages/home.html
+++ b/pages/home.html
@@ -32,6 +32,67 @@
         <a href="http://twitter.com">ini twitter</a>
         <a href="http://facebook.com">ini pesbok</a>
     </nav>
-    
+
+
+    <!-- content -->
+    <section>
+        <h1>
+            dummy text
+        </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+                aut molestiae voluptatum vero atque harum fuga rem assumenda odit, 
+                voluptas, alias quia numquam quasi dolorem explicabo. In quam quo 
+                minima culpa iste tempore aliquam nobis ab, fugiat nam autem quae inventore?
+                Eum at pariatur alias sapiente sint expedita, numquam illo. Quibusdam esse 
+                natus nisi voluptatibus id qui aut voluptas possimus deserunt consequatur,
+                iste eaque quas alias cupiditate vero atque deleniti delectus rerum blanditiis
+                totam! Hic explicabo minus blanditiis quisquam quam impedit, cum fuga dignissimos
+                laborum omnis ad consequatur culpa quibusdam eius doloremque fugit facere! Cumque
+                omnis quas soluta odio velit quos in architecto sapiente culpa mollitia delectus
+                enim, maxime doloribus obcaecati, unde consectetur sint itaque! Eum blanditiis 
+                maxime eos culpa eveniet consequuntur, inventore quis, consequatur mollitia
+                temporibus, repellat totam sed! Minima, molestias? Itaque asperiores quod 
+                magni laboriosam impedit, aliquid suscipit nulla sit iste animi amet dolorem 
+                rem sunt necessitatibus error iusto deserunt. Culpa ea voluptatibus ut ex.
+                Quo corrupti, magni porro, itaque distinctio rerum enim, animi repellendus
+                omnis nemo eligendi minima? Quidem molestiae eaque impedit officia reiciendis
+                nostrum dicta neque culpa. Praesentium, facilis at? Tempora nemo amet, vitae 
+                sed, quia voluptatem odit placeat culpa omnis aut, aperiam quaerat est possimus?</p>
+    </section>
+
+
+    <!-- ARTICLE -->
+    <article style="margin: 0px; padding: 5px; background-color: aqua;">
+        <h3>article</h3>
+        <article style="background-color: azure; margin: 10px; padding: 5px;">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta beatae nisi vero perspiciatis placeat, neque repellendus molestiae illo animi nulla impedit repellat accusantium maxime iure consequuntur esse aliquam itaque velit perferendis, quo architecto sit. Saepe quasi, blanditiis laborum ut cupiditate dignissimos nemo molestiae minus commodi asperiores facilis? Accusantium, omnis.</p>
+        </article>
+        
+    </article>
+
+
+    <!-- ASIDE -->
+    <aside style="width: 30%; padding-left: 20px; float:right; background-color:blanchedalmond;">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi facere autem nostrum minus veniam laboriosam pariatur esse maiores, rem doloremque!</p>
+    </aside>
+
+    <!-- DIV -->
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, animi!
+    </div>
+
+
+    <!-- span DIA BISA KESAMPING KALO DIV LGSUNG AUTO ENTER-->
+    <span>Lorem, ipsum.</span>
+    <span>Lorem, ipsum dolor.</span>
+
+    <!-- footer -->
+    <footer>
+        <h1>HCI halo</h1>
+        <p>session 2 -> intro to HTML</p>
+
+
+        <a href="http://tokopedia.com">tokped gan</a>
+    </footer>
 </body>
 </html>
